# CloudflareBypassForScraping

./: .gitignore  CloudflareBypasser.py  Dockerfile  LICENSE  README.md  cloudflare_bypass.py  docker-compose.yml  docker-entrypoint.sh  docker_startup.sh  old_server.py  old_server_requirements.txt  pyproject.toml  requirements.txt  server.py  server_requirements.txt  test.py
.github/workflows/: docker-ghcr.yaml  tests.yml
cf_bypasser/: __init__.py
cf_bypasser/cache/: __init__.py  cookie_cache.py
cf_bypasser/core/: __init__.py  bypasser.py  mirror.py
cf_bypasser/server/: __init__.py  app.py  models.py  routes.py
cf_bypasser/utils/: __init__.py  config.py  constants.py  ipcheck.py  misc.py  security.py
docs/: CONFIGURATION.md  USAGE.md
tests/: conftest.py  pytest.ini  run_tests.py  test-requirements.txt  test_cookies.py  test_fix_bypasser.py  test_fix_cache.py  test_fix_html_settle.py  test_fix_mirror.py  test_fix_routes.py  test_html.py  test_mirror.py  test_path_collision.py  test_server.py
