[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cf_bypasser*"]

[project]
name = "CloudflareBypassForScraping"
description = "A cloudflare verification bypass script for webscraping"
readme = "README.md"
requires-python = ">=3.12"

keywords = [
    "python",
    "recaptcha",
    "solver",
    "cloudflare",
    "bypass",
    "cloudflare-bypass",
    "cloudflare-bypass-script",
    "cloudflare-bypasser",
    "cloakbrowser",
]

dynamic = ["version"]

authors = [{ name = "Sarper AVCI" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "cloakbrowser",
    "curl_cffi",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "pyvirtualdisplay",
]
